# invoice-tool

./: README.md  database.types.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  index.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: DesktopInvoiceView.vue  InvoiceForm.vue  InvoicePreview.vue  MobileInvoiceView.vue  Navbar.vue  Scalable.vue  SignInDialog.vue
src/composables/: useActiveInvoice.ts  useAuthStatus.ts  useDebounce.ts  useResizeObserver.ts
src/config/: database.ts  router.ts  supabase.ts  theme.ts
src/stores/: auth.ts  index.ts  invoice.ts
src/utils/: currencies.ts  formatNumber.ts
src/views/: Buyers.vue  EditInvoice.vue  Home.vue  NotFound.vue  SavedInvoices.vue  Sellers.vue
supabase/: config.toml
supabase/functions/generate-pdf/: index.ts
