[package]
name = "invoice-tool"
version = "0.1.0"
description = "A lightweight client-side invoice generator"
authors = ["apodacaduron@gmail.com"]
edition = "2021"
license = "MIT"
homepage = "https://invoicetool.netlify.app"
repository = "https://github.com/apodacaduron/invoice-tool"
keywords = ["invoice", "generator", "freelance"]

[package.metadata.tauri]
name = "Invoice Tool"
description = "A simple tool for generating invoices"
version = "0.1.0"
author = "Daniel Apodaca <apodacaduron@gmail.com>"
license = "MIT"

[package.metadata.tauri.window]
title = "Invoice Tool"

[package.metadata.tauri.icon]
linux = "icons/icon.png"
windows = "icons/icon.ico"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-write-file", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
